Fix Invalid LInk

--- a/src/content/docs/ecosystem/validators/overview.mdx
+++ b/src/content/docs/ecosystem/validators/overview.mdx
@@ -39,7 +39,7 @@ Please explore the following links to learn more about the SKALE Token Economics
 - Running the latest SKALE Node software releases
 - Participation in governance (when applicable)
 
-To encourage proper behavior amongst network participants, SKALE follows a Proof of Stake (PoS) system whereby each node must
+To encourage proper behavior among network participants, SKALE follows a Proof of Stake (PoS) system whereby each node must
 stake a predetermined amount of SKALE tokens to be slashed at the citation of any activity not condoned by the network.
 
 Activities not approved by the network include those which denote a failure to properly participate in each assigned SKALE
@@ -52,7 +52,7 @@ Ethereum mainnet to reward or slash nodes according to their respective performa
 ## Requirements
 
 To be added as a node to the SKALE Network, a prospective node must run the SKALE Admin, which manages all operations in the node and is
-installed with the [skale-node-cli](/validators/validator-cli). SKALE Admin evaluates the prospective node to ensure that it's upholding
+installed with the [skale-node-cli](/ecosystem/validators/validator-cli). SKALE Admin evaluates the prospective node to ensure that it's upholding
 network hardware requirements. If the prospective node passes this verification step, the SKALE Admin permits the node to submit a request
 to SKALE Manager to join the network. This request contains both the required network deposit as well as node metadata collected by the
 SKALE Daemon (for example IP address, port, public key, etc.).
