--- a/src/content/docs/ecosystem/validators/validator-cli/releases/v1-2-0.mdx
+++ b/src/content/docs/ecosystem/validators/validator-cli/releases/v1-2-0.mdx
@@ -37,8 +37,8 @@ sk-val init
 ```
 
 **Required Arguments**
-- `--endpoint/-e` is the RPC endpoint of th enode in the network where SKALE Manager is deployed [http or https]
-- `--contracts-url/-c` is the URL to SKALE Mnaager contracts ABI and addresses
+- `--endpoint/-e` is the RPC endpoint of the node in the network where SKALE Manager is deployed [http or https]
+- `--contracts-url/-c` is the URL to SKALE Manager contracts ABI and addresses
 - `-w/--wallet` is the type of the wallet that will be used to sign transactions. Must be of type software, sgx, or hardware.
 
 <Aside type="note" >
@@ -78,21 +78,21 @@ sk-val sgx info
 
 ### Register
 
-Registers as a new SKALE valdiator.
+Registers as a new SKALE validator.
 
 ```shell
-sk-val valdiator register
+sk-val validator register
 ```
 
 **Required Arguments**
 - `--name/-n` is the validator name
 - `--description/-d` is the validator description
-- `--commission-rate/-c` is the commision rate in percentage form
-- `--min-delegation` is the minimum delegation amount that the valdiator will accept
+- `--commission-rate/-c` is the commission rate in percentage form
+- `--min-delegation` is the minimum delegation amount that the validator will accept
 
 **Optional Arguments**
 - `--pk-file` is a path to a file with private key (only supported for *software* wallet type)
-- `--gas-price` allows the executor to specify th egas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
+- `--gas-price` allows the executor to specify the gas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
 - `--yes` the confirmation flag may be set in advance
 
 #### Usage Example
@@ -102,14 +102,14 @@ sk-val validator register -n test -d "test description" -c 20 --min-delegation 1
 
 ### List
 
-Lists all avaialble validators.
+Lists all available validators.
 
 ```shell
 sk-val validator ls
 ```
 
 **Optional Arguments**
-- `--wei/-w` can be used to show th amount of tokens in wei
+- `--wei/-w` can be used to show the amount of tokens in wei
 
 ### Delegations
 
@@ -133,9 +133,9 @@ sk-val validator accept-delegation --pk-file ./pk.txt
 **Requirement Arguments**
 - `--delegation-id` is the id of he delegation request to accept
 
-**Optional Arguements**
+**Optional Arguments**
 - `--pk-file` is a path to a file with private key (only supported for *software* wallet type)
-- `--gas-price` allows the executor to specify th egas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
+- `--gas-price` allows the executor to specify the gas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
 - `--yes` the confirmation flag may be set in advance
 
 ### Accept All Pending Delegations
@@ -152,7 +152,7 @@ sk-val validator accept-all-delegations ./pk.txt
 
 **Optional Arguments**
 - `--pk-file` is a path to a file with private key (only supported for *software* wallet type)
-- `--gas-price` allows the executor to specify th egas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
+- `--gas-price` allows the executor to specify the gas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
 
 ### Validator Linked Addresses
 
@@ -163,7 +163,7 @@ sk-val validator linked-addresses [ADDRESS]
 ```
 
 **Required Parameters**
-1. `ADDRESS` is the Ethereum address of the valdiator
+1. `ADDRESS` is the Ethereum address of the validator
 
 ### Link Address
 
@@ -175,11 +175,11 @@ sk-val validator link-address [ADDRESS] [NODE_SIGNATURE] --pk-file ./pk.txt
 
 **Required Parameters**
 1. `ADDRESS` is the Ethereum address that will be linked
-2. `NODE_SIGNATURE` is the signature of the node that you can get using the `skale node signaure` command from the SKALE Node CLI
+2. `NODE_SIGNATURE` is the signature of the node that you can get using the `skale node signature` command from the SKALE Node CLI
 
-**Optional Arguements**
+**Optional Arguments**
 - `--pk-file` is a path to a file with private key (only supported for *software* wallet type)
-- `--gas-price` allows the executor to specify th egas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
+- `--gas-price` allows the executor to specify the gas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
 - `--yes` the confirmation flag may be set in advance
 
 ### Unlink Address
@@ -193,9 +193,9 @@ sk-val validator unlink-address [ADDRESS] --pk-file ./pk.txt
 **Required Parameters**
 1. `ADDRESS` is the Ethereum address that will be unlinked
 
-**Optional Arguements**
+**Optional Arguments**
 - `--pk-file` is a path to a file with private key (only supported for *software* wallet type)
-- `--gas-price` allows the executor to specify th egas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
+- `--gas-price` allows the executor to specify the gas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
 - `--yes` the confirmation flag may be set in advance
 
 ### Validator Info
@@ -229,9 +229,9 @@ sk-val validator withdraw-fee [RECIPIENT_ADDRESS] --pk-file ./pk.txt
 **Required Parameters**
 1. `RECIPIENT_ADDRESS` is the address to transfer the bounties too
 
-**Optional Arguements**
+**Optional Arguments**
 - `--pk-file` is a path to a file with private key (only supported for *software* wallet type)
-- `--gas-price` allows the executor to specify th egas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
+- `--gas-price` allows the executor to specify the gas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
 - `--yes` the confirmation flag may be set in advance
 
 ### Set Minimum Delegation Amount (MDA)
@@ -245,14 +245,14 @@ sk-val validator set-mda [NEW_MDA] --pk-file ./pk.txt
 **Required Parameters**
 1. `NEW_MDA` is the new mda value
 
-**Optional Arguements**
+**Optional Arguments**
 - `--pk-file` is a path to a file with private key (only supported for *software* wallet type)
-- `--gas-price` allows the executor to specify th egas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
+- `--gas-price` allows the executor to specify the gas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
 - `--yes` the confirmation flag may be set in advance
 
 ### Request Address Change
 
-Requests a change of Ethereum Address for the valdiator.
+Requests a change of Ethereum Address for the validator.
 
 ```shell
 sk-val validator change-address [ADDRESS] --pk-file ./pk.txt
@@ -261,9 +261,9 @@ sk-val validator change-address [ADDRESS] --pk-file ./pk.txt
 **Required Parameters**
 1. `ADDRESS` is the validator Ethereum address
 
-**Optional Arguements**
+**Optional Arguments**
 - `--pk-file` is a path to a file with private key (only supported for *software* wallet type)
-- `--gas-price` allows the executor to specify th egas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
+- `--gas-price` allows the executor to specify the gas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
 - `--yes` the confirmation flag may be set in advance
 
 ### Confirm Address Change
@@ -277,9 +277,9 @@ sk-val validator confirm-address [VALIDATOR_ID] --pk-file ./pk.txt
 **Required Parameters**
 1. `VALIDATOR_ID` is the ID of the associated validator
 
-**Optional Arguements**
+**Optional Arguments**
 - `--pk-file` is a path to a file with private key (only supported for *software* wallet type)
-- `--gas-price` allows the executor to specify th egas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
+- `--gas-price` allows the executor to specify the gas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
 - `--yes` the confirmation flag may be set in advance
 
 ### Earned Fees
@@ -312,9 +312,9 @@ sk-val holder delegate
 - `--delegation-period` is the delegation period in months [Set to 2]
 - `--info` to request info on the delegation
 
-**Optional Arguements**
+**Optional Arguments**
 - `--pk-file` is a path to a file with private key (only supported for *software* wallet type)
-- `--gas-price` allows the executor to specify th egas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
+- `--gas-price` allows the executor to specify the gas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
 
 ### Delegations
 
@@ -332,35 +332,35 @@ sk-val holder delegations [ADDRESS]
 
 ### Cancel Pending Delegation
 
-Use to cancel a pending delegation reqeust.
+Use to cancel a pending delegation request.
 
 ```shell
 sk-val holder cancel-delegation [DELEGATION_ID]
 ```
 
-**Reqiured Parameters**
+**Required Parameters**
 
 1. `DELEGATION_ID` is the id of the delegation to cancel
 
-**Optional Arguements**
+**Optional Arguments**
 - `--pk-file` is a path to a file with private key (only supported for *software* wallet type)
-- `--gas-price` allows the executor to specify th egas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
+- `--gas-price` allows the executor to specify the gas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
 
 ### Request Undelegation
 
-Request undelegation which goes into affect at the end of the undelegatoin period.
+Request undelegation which goes into affect at the end of the undelegation period.
 
 ```shell
 sk-val holder undelegate [DELEGATION_ID]
 ```
 
-**Reqiured Parameters**
+**Required Parameters**
 
 1. `DELEGATION_ID` is the id of the delegation to cancel
 
-**Optional Arguements**
+**Optional Arguments**
 - `--pk-file` is a path to a file with private key (only supported for *software* wallet type)
-- `--gas-price` allows the executor to specify th egas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
+- `--gas-price` allows the executor to specify the gas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
 
 ### Withdraw Bounty
 
@@ -370,14 +370,14 @@ Withdraws a bounty to the specified address
 sk-val holder withdraw-bounty [VALIDATOR_ID] [RECIPIENT_ADDRESS] --pk-file ./pk.txt
 ```
 
-**Reqiured Parameters**
+**Required Parameters**
 
 1. `VALIDATOR_ID` is the id of the validator
 2. `RECIPIENT_ADDRESS` is the Ethereum address to have the bounty sent too
 
 **Optional Arguments**
 - `--pk-file` is a path to a file with private key (only supported for *software* wallet type)
-- `--gas-price` allows the executor to specify th egas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
+- `--gas-price` allows the executor to specify the gas price value in gwei for a transaction. If not specified, the average gas price of the network will be double and set.
 - `--yes` confirmation flag can be used to auto execute
 
 ### Locked
@@ -396,7 +396,7 @@ sk-val holder locked [ADDRESS]
 
 ### Earned Bounties
 
-Reads the amound of earned bounties by a token holder for a single validator.
+Reads the amount of earned bounties by a token holder for a single validator.
 
 ```shell
 sk-val holder earned-bounties [VALIDATOR_ID] [ADDRESS]
@@ -422,12 +422,12 @@ sk-val wallet setup-ledger
 ```
 
 **Required Arguments**
-- `--address-index` is the index of the walle tto use (starts at 0)
+- `--address-index` is the index of the wallet to use (starts at 0)
 - `--keys-type` is the type of Ledger keys whether live or legacy
 
 ### Send ETH Tokens
 
-Executes a transfer of ETH tokens to a specfic address.
+Executes a transfer of ETH tokens to a specific address.
 
 ```shell
 sk-val wallet send-eth [ADDRESS] [AMOUNT]
@@ -435,7 +435,7 @@ sk-val wallet send-eth [ADDRESS] [AMOUNT]
 
 **Required Parameters**
 
-1. `ADDRESS` is the Ethereum reciever address (e.g to)
+1. `ADDRESS` is the Ethereum receiver address (e.g to)
 2. `AMOUNT` is the amount of ETH tokens to send
 
 **Optional Arguments**
@@ -449,7 +449,7 @@ sk-val wallet send-eth 0x01C19c5d3Ad1C3014145fC82263Fbae09e23924A 0.01 --pk-file
 
 ### Send SKL Tokens
 
-Executes a transfer of SKL tokens to a specific addres.
+Executes a transfer of SKL tokens to a specific address.
 
 ```shell
 sk-val wallet send-skl [ADDRESS] [AMOUNT]
@@ -457,7 +457,7 @@ sk-val wallet send-skl [ADDRESS] [AMOUNT]
 
 **Required Parameters**
 
-1. `ADDRESS` is the Ethereum reciever address (e.g to)
+1. `ADDRESS` is the Ethereum receiver address (e.g to)
 2. `AMOUNT` is the amount of ETH tokens to send
 
 **Optional Arguments**
@@ -474,7 +474,7 @@ sk-val wallet send-skl 0x01C19c5d3Ad1C3014145fC82263Fbae09e23924A 0.01 --pk-file
 
 ### Balance
 
-Shows the balance of the valdiator self-recharging wallet.
+Shows the balance of the validator self-recharging wallet.
 
 ```shell
 sk-val srw balance [VALIDATOR_ID]
