Push Additional Spelling Fixes

--- a/src/content/docs/builders/chain-operators/administrative-contracts.mdx
+++ b/src/content/docs/builders/chain-operators/administrative-contracts.mdx
@@ -18,7 +18,7 @@ This is a pre-deployed contract that handles Chain configuration and [Access Con
 ## Etherbase
 
 This is a pre-deployed contract that allows for operators to withdraw sFUEL.
-sFUEL consumed during a transaction is recyled to this contract.
+sFUEL consumed during a transaction is recycled to this contract.
 
 ## Filestorage
 
