--- a/src/content/docs/builders/chain-operators/architecture.mdx
+++ b/src/content/docs/builders/chain-operators/architecture.mdx
@@ -10,12 +10,12 @@ import { Aside } from '@astrojs/starlight/components';
 <MermaidInit />
 
 A single SKALE Chain has a number of management pieces that have to be taken into account in addition to the broader
-network pieces. The following outlines the high-level arechitecture information for chain operators.
+network pieces. The following outlines the high-level architecture information for chain operators.
 
 ## Network Architecture
 
 SKALE is a multi-chain network full of EVM blockchains. The network itself can grow linearly to theoretically an
-infinite number of chains as long as the valdiator pool continues to grow. This section contains a key not related
+infinite number of chains as long as the validator pool continues to grow. This section contains a key not related
 to how HubChains are related to dedicated AppChains.
 
 With parts of SKALE being built directly on the Ethereum Network, including the native bridge, it is not feasible for
@@ -31,7 +31,7 @@ Chain operations can occur fully from the Ethereum side, while a few key operati
 ## Default Contracts
 
 Every SKALE Chain comes with a set of **predeployed or default** contracts. These contracts are at the core of SKALE Chain Operations.
-It is important to note that all of these contracts are upgradeable by the chain owwner and initially can only be managed by the chain owner.
+It is important to note that all of these contracts are upgradeable by the chain owner and initially can only be managed by the chain owner.
 
 ## Who is the SKALE Chain Owner?
 
