--- a/src/content/docs/builders/tools/contracts/openzeppelin.mdx
+++ b/src/content/docs/builders/tools/contracts/openzeppelin.mdx
@@ -1,6 +1,6 @@
 ---
-title: OpenZepplin
-description: Intro to OpenZepplin
+title: OpenZeppelin
+description: Intro to OpenZeppelin
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
@@ -11,7 +11,7 @@ import openzeppelin from '../../../../../assets/openzeppelin-wizard.png';
 <ToolLayout
 	introParagraph="OpenZeppelin is renowned for its smart contracts, which adhere to industry standards and ensure robust security through comprehensive audits. These features give developers a high level of confidence and reliability when using OpenZeppelin for their projects.
     OpenZeppelin contracts implement widely recognized industry standards, such as ERC-721 or ERC-20. Their extensive contracts variety and rigorous security audits make them an excellent starting point for all dApp developers."
-	toolName="OpenZepplin"
+	toolName="OpenZeppelin"
 	toolLink="https://docs.openzeppelin.com/contracts/5.x/"
 	toolDocsLink="https://docs.openzeppelin.com/contracts/5.x/"
 >
