--- a/src/content/docs/builders/tools/contracts/remix.mdx
+++ b/src/content/docs/builders/tools/contracts/remix.mdx
@@ -47,9 +47,9 @@ contract HelloSKALE {
 
 1. #### Contract Compilation 
 
-    <Image src={remixCompile} alt="Remix Contrac Compilation"/>
+    <Image src={remixCompile} alt="Remix Contract Compilation"/>
 
-        **1.** Select the `Solidy compiler` tab
+        **1.** Select the `Solidity compiler` tab
         
         **2.** Select the `Compile` button
 
@@ -70,7 +70,7 @@ contract HelloSKALE {
         
 
 
-3. #### Contract Deployement
+3. #### Contract Deployment
 
     <Image src={remixBtnDeploy} alt="Remix Contract Deployment"/>
     Select the deploy button to have your contract available on the selected SKALE Chain
