--- a/src/content/docs/builders/tools/nfts/marketplaces/keepsake.mdx
+++ b/src/content/docs/builders/tools/nfts/marketplaces/keepsake.mdx
@@ -14,13 +14,13 @@ import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 
 Some of the main features are:
 
-|Payments|Embeded Bridging|Launchpad|
+|Payments|Embedded Bridging|Launchpad|
 |-|-|-|
 | USDC | SKALE IMA Bridge | No |
 
 
 For more information please check one of the two marketplaces:
-- [Keepsake Calypso Marketplace](https://skale.keepsake.gg/)
-- [Keepsake Nebula Marketplace](https://nskale.keepsake.gg/)
+- [Keepsake Calypso Marketplace](https://calypso.keepsake.gg/)
+- [Keepsake Nebula Marketplace](https://keepsake.gg/)
 
 </ToolLayout>
