--- a/src/content/docs/builders/index.mdx
+++ b/src/content/docs/builders/index.mdx
@@ -28,8 +28,8 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
 ### Integrating SKALE for Infra Partners
 
-If you are a centralized exchange, SDK, wallet or some other infrastcture that is looking
-to add suppoort for the SKALE Network, then the following integration guide is a great place to start.
+If you are a centralized exchange, SDK, wallet or some other infrastructure that is looking
+to add support for the SKALE Network, then the following integration guide is a great place to start.
 
 <LinkCard
 		title="Integration Guide"
