--- a/src/content/docs/builders/tools/nfts/marketplaces/pixelrealm.mdx
+++ b/src/content/docs/builders/tools/nfts/marketplaces/pixelrealm.mdx
@@ -15,7 +15,7 @@ import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 
 Some of the main features are:
 
-|Payments|Embeded Bridging|Launchpad|
+|Payments|Embedded Bridging|Launchpad|
 |-|-|-|
 | USDC | No | [Yes](https://app.pixelrealm.io/launch/) |
 
