Push Spelling Fixes

--- a/src/content/docs/builders/chain-operators/overview.mdx
+++ b/src/content/docs/builders/chain-operators/overview.mdx
@@ -9,7 +9,7 @@ The SKALE Network is a multi-chain network where "owning" or "operating" a SKALE
 does not require the owner or operator to actually run the nodes. This is because the SKALE Network
 has validators to run the SKALE Chains.
 
-The operator(s) of a SKALE Chain have special privleges that enable them to manage the chain and provide
+The operator(s) of a SKALE Chain have special privileges that enable them to manage the chain and provide
 access and resources to others; whether in their team for a dedicated AppChain or for a 3rd party if a HubChain.
 
 <CardGrid>
@@ -22,7 +22,7 @@ access and resources to others; whether in their team for a dedicated AppChain o
 		href="/builders/chain-operators/access-control"
 	/>
 	<LinkCard
-		title="Adminstrative Contracts"
+		title="Administrative Contracts"
 		href="/builders/chain-operators/administrative-contracts"
 	/>
 	{/* TODO */}
