--- a/src/content/docs/builders/tools/bridges/index.mdx
+++ b/src/content/docs/builders/tools/bridges/index.mdx
@@ -23,7 +23,7 @@ The SKALE Ecosystem has different bridging solutions available to all dApps.
 	<LinkCard
 		title="Meson Finance"
 		href="/builders/tools/bridges/meson-fi"
-		description="Bridge conecting SKALE to over 35 different chains"
+		description="Bridge connecting SKALE to over 35 different chains"
 	/>
 	<LinkCard
 		title="LayerZero"
