--- a/src/content/docs/builders/tools/contracts/remix.mdx
+++ b/src/content/docs/builders/tools/contracts/remix.mdx
@@ -8,7 +8,7 @@ import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 import { Image } from 'astro:assets';
 import remixCompile from '../../../../../assets/remix-compile.png';
 import remixWallet from '../../../../../assets/remix-deploy.png';
-import remixBtnDeploy from '../../../../../assets/remix-dply-btn.png';
+import remixBtnDeploy from '../../../../../assets/remix-deply-btn.png';
 
 
 <ToolLayout
