--- a/src/content/docs/builders/tools/payments/index.mdx
+++ b/src/content/docs/builders/tools/payments/index.mdx
@@ -8,7 +8,7 @@ sidebar:
 
 import { LinkCard ,CardGrid } from "@astrojs/starlight/components";
 
-There's differen way developers can utilize payments in their dApps. The SKALE chains have different providers to cover all those situations. 
+There's different way developers can utilize payments in their dApps. The SKALE chains have different providers to cover all those situations. 
 
 <CardGrid>
 	<LinkCard
