--- a/src/content/docs/ecosystem/validators/node-cli/releases/v2-0.mdx
+++ b/src/content/docs/ecosystem/validators/node-cli/releases/v2-0.mdx
@@ -94,7 +94,7 @@ skale version
 
 ### Node Information
 
-Retreives the base info about SKALE node.
+Retrieves the base info about SKALE node.
 
 ```shell
 skale node info
@@ -102,7 +102,7 @@ skale node info
 
 **Optional Arguments**
 
-- `-f/--format` accepts either **json** or **text** as valid input which formats the output accordinly
+- `-f/--format` accepts either **json** or **text** as valid input which formats the output accordingly
 
 ### Node Initialization
 
@@ -179,7 +179,7 @@ Updates a SKALE node on the current machine.
 skale node update [ENV_FILEPATH]
 ```
 
-**Required Argumnets**
+**Required Arguments**
 
 - `ENV_FILEPATH` is the path to env file where parameters are defined
 
