--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -37,7 +37,7 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
 	<a id="home-tools-icon-link" href="/builders/tools" style="text-decoration: none; color: var(--sl-color-white);">
 		<Card title="Tools" icon="forward-slash">
 			{/* Add action word to start */}
-			The open-source SKALE Netowrk has a variety of tools sure to fit your needs. Check them out here
+			The open-source SKALE Network has a variety of tools sure to fit your needs. Check them out here
 		</Card>
 	</a>
 </CardGrid>
