--- a/src/content/docs/quick-start/building-for-skale.mdx
+++ b/src/content/docs/quick-start/building-for-skale.mdx
@@ -8,7 +8,7 @@ import { Card, CardGrid, Steps, Tabs, TabItem } from "@astrojs/starlight/compone
 SKALE Chains and the greater SKALE Network offer a number of benefits for developers.
 The following page goes through a number of key topics about SKALE to help you build successfully.
 
-### EVM Compatability
+### EVM Compatibility
 
 The SKALE Network is a Layer-1 blockchain network that contains many individual SKALE Chains.
 Every SKALE Chain is fully EVM compatible meaning that all of your favorite tools on Ethereum,
