--- a/src/content/docs/quick-start/deploy-to-testnet.mdx
+++ b/src/content/docs/quick-start/deploy-to-testnet.mdx
@@ -61,7 +61,7 @@ If this is your first time deploying to an EVM network we have listed some popul
 ### Building for SKALE
 
 We hope that you were able to successfully deploy your smart contracts to your SKALE Chain of choice.
-If you had any trouble please join us in [Discord](https://discord.com/invite/gM5XBy6). If you deployed succesfully, head
+If you had any trouble please join us in [Discord](https://discord.com/invite/gM5XBy6). If you deployed successfully, head
 onto the next step and learn more about **Building for SKALE**.
 
 <LinkCard
