--- a/src/content/docs/ecosystem/validators/overview.mdx
+++ b/src/content/docs/ecosystem/validators/overview.mdx
@@ -59,7 +59,7 @@ SKALE Daemon (for example IP address, port, public key, etc.).
 
 Once the request has been submitted to SKALE Manager on Ethereum, SKALE Manager randomly defines the prospective node as a 'full node' or
 a 'fractional node' by assigning different sizes of SKALE Chains to the prospective node. Full nodes have all their resources utilized
-for a single sidechain, while fractional nodes participate in multiple sidechains (multi-tenancy).
+for a single SKALE Chain, while fractional nodes participate in multiple SKALE Chains (multi-tenancy).
 
 ### General Hardware Requirements
 
