--- a/src/content/docs/ecosystem/validators/validator-setup.mdx
+++ b/src/content/docs/ecosystem/validators/validator-setup.mdx
@@ -2,3 +2,158 @@
 title: Validator Setup
 description: Setup Process for new SKALE Validator
 ---
+
+import { Step, Steps, Aside } from "@astrojs/starlight/components";
+
+<Steps>
+
+1. ## Setup Validator
+
+    <Aside type="note">Due date 20th day of each month</Aside>
+
+    ### Prepare
+
+    #### Obtain Ethereum Software Wallet or Hardware wallet
+
+    Get a Ledger, Hardware or Software wallet ready like Metamask/Portis/Bitski/Torus/myetherwallet.
+    Specific setup instructions will follow.
+
+    This wallet will be used for receiving delegation, bounties, and self delegating.
+
+    #### Fund Validator Wallet with ETH
+
+    Be ready to have some ETH to accept delegations and link your validator node.
+    Remember these are transactions with SKALE Manager on Ethereum, and therefore require ETH.
+
+    *Minimum ETH: 1.0*
+
+    #### Get SKALE Manager contract ABIs from SKALE
+
+    [https://raw.githubusercontent.com/skalenetwork/skale-network/master/releases/mainnet/skale-manager/1.11.0/skale-manager-1.11.0-mainnet-abi.json](https://raw.githubusercontent.com/skalenetwork/skale-network/master/releases/mainnet/skale-manager/1.11.0/skale-manager-1.11.0-mainnet-abi.json)
+
+    #### Fund SRW Wallet with ETH
+
+    Be ready to fund ETH in your self-recharging wallet (SRW). See [Self-recharging wallet documentation](/ecosystem/validators/validator-cli/self-recharding-wallets).
+
+    *Minimum ETH*: <math xmlns="http://www.w3.org/1998/Math/MathML"><mrow><mn>0.5</mn><mo>&#x2219;</mo><mi>node</mi><mo>&#xA0;</mo><mi>count</mi></mrow></math>
+
+    #### Decide your commission fee
+
+    Decide on your commission fee. This cannot be changed once it is set. To set a new commission fee, you'll have to register a new validator.
+    This new validator would have to link nodes and accept delegations for it (old validator nodes and delegations cannot be rolled into a
+    new validator commission fee).
+
+    _Reference Documents_
+    - [Validator & Token Economics](https://skale.network/blog/validator-economics)
+    - [Tokenomics](https://skale.network/tokenomics)
+
+    ### Register Validator
+
+    SKALE Validator CLI is the validator client interface for registering a new validator into network or handling additional
+    delegation services where validators can self delegate or token holders can delegate to a validator. These are the type of
+    operations that can be done with the Validator CLI:
+
+    - Register Validator (Set Commission Rate or Minimum delegation amount)
+    - Accept pending delegations
+    - Link all validator node addresses to a validator wallet address
+    - Request or cancel a delegation
+
+    [See the SKALE Validator CLI documentation](/ecosystem/validators/validator-cli/overview)
+
+    This document contains instructions on how to get started with the SKALE Validator CLI.
+
+    <Aside type="note">
+        Validator CLI doesn't have to be installed in the same server as the node-cli. This can be set up on Mac or Linux.
+        This does not need to be included in every node. Setting up once per validator organization is sufficient.
+    </Aside>
+
+    #### Install SKALE Validator CLI
+
+    ##### Download the SKALE Validator CLI binary
+
+    `VERSION_NUM` is a version identifier
+
+    ```shell
+    VERSION_NUM=[VERSION_NUM] && sudo -E bash -c "curl -L https://github.com/skalenetwork/validator-cli/releases/download/$VERSION_NUM/sk-val-$VERSION_NUM-`uname -s`-`uname -m` >  /usr/local/bin/sk-val"
+    ```
+
+    ##### Apply executable permissions to the binary
+
+    ```shell
+    chmod +x /usr/local/bin/sk-val
+    ```
+
+    ##### Set SKALE Manager contracts info and set the endpoint
+
+    ```shell
+    sk-val init -e [ENDPOINT] -c [ABI] --wallet [software/ledger]
+    ```
+
+    Required arguments:
+
+    - `--endpoint/-e` - RPC endpoint of the node in the network where SKALE manager is deployed (http or https). Example is https://my.geth.node.ip/..
+
+    - `--contracts-url/-c` - URL to SKALE Manager contracts ABI and addresses
+
+    - `-w/--wallet` - Type of the wallet that will be used for signing transactions (software or ledger)
+
+    #### Setup wallet
+
+    ##### Software wallet
+
+    If you want to use software wallet you need to save private key into a file.
+
+    Replace `[YOUR PRIVATE KEY]` with your wallet private key
+
+    ```shell
+    echo [YOUR PRIVATE KEY] > ./pk.txt
+    ```
+
+    ##### Ledger  wallet
+
+    If you want to use ledger you should install ETH ledger application and  initialize device with `setup-ledger` command.
+
+    ```shell
+    sk-val wallet setup-ledger --address-index [ADDRESS_INDEX] --keys-type [KEYS_TYPE]
+    ```
+
+    Required arguments:
+
+    -   `--address-index` - Index of the address to use (starting from `0`)
+    -   `--keys-type` - Type of the Ledger keys (live or legacy)
+
+    <Aside type="note" title="Important">
+    Make sure you enabled blind signing on ETH application settings. Otherwise transactions won't work
+    </Aside>
+    
+    #### Register as a new SKALE validator
+
+    <Aside type="caution" title="Warning">
+    DON'T REGISTER A NEW VALIDATOR IF YOU ALREADY HAVE ONE! check : `sk-val validator ls`. For additional node set up, please go to Step 3.
+    </Aside>
+
+    ```shell
+    sk-val validator register -n [NAME] -d [DESCRIPTION] -c [COMMISSION_RATE] --min-delegation [MIN_DELEGATION]
+    ```
+
+    Required arguments:
+
+    -   `--name/-n` - Validator name
+    -   `--description/-d` - Validator description (preferably organization info)
+    -   `--commission-rate/-c` - Commission rate (percent %)
+    -   `--min-delegation` - Validator minimum delegation amount
+
+    Optional arguments:
+
+    -   `--pk-file` - Path to file with private key (only for `software` wallet type)
+    -   `--gas-price` - Gas price value in Gwei for transaction (if not specified doubled average network value will be used)
+    -   `--yes` - Confirmation flag
+
+    ### Make sure that your validator is added to the trusted list
+
+    To ensure that your validator is added to trusted contact SKALE team.
+
+    <Aside type="note" title="Important">
+    This is a temporary process, which will be removed as the community matures.
+    </Aside>
+</Steps>
