--- a/src/content/docs/ecosystem/validators/validator-setup.mdx
+++ b/src/content/docs/ecosystem/validators/validator-setup.mdx
@@ -2,42 +2,41 @@
 title: Validator Setup
 description: Setup Process for new SKALE Validator
 ---
-
 import { Step, Steps, Aside } from "@astrojs/starlight/components";
 
 <Steps>
 
 1. ## Setup Validator
-
+    
     <Aside type="note">Due date 20th day of each month</Aside>
 
-    ### Prepare
+    ### 1.1 Prepare
 
-    #### Obtain Ethereum Software Wallet or Hardware wallet
+    #### 1.1.1 Obtain Ethereum Software Wallet or Hardware wallet
 
     Get a Ledger, Hardware or Software wallet ready like Metamask/Portis/Bitski/Torus/myetherwallet.
     Specific setup instructions will follow.
 
     This wallet will be used for receiving delegation, bounties, and self delegating.
 
-    #### Fund Validator Wallet with ETH
+    #### 1.1.2 Fund Validator Wallet with ETH
 
     Be ready to have some ETH to accept delegations and link your validator node.
     Remember these are transactions with SKALE Manager on Ethereum, and therefore require ETH.
 
     *Minimum ETH: 1.0*
 
-    #### Get SKALE Manager contract ABIs from SKALE
+    #### 1.1.3 Get SKALE Manager contract ABIs from SKALE
 
     [https://raw.githubusercontent.com/skalenetwork/skale-network/master/releases/mainnet/skale-manager/1.11.0/skale-manager-1.11.0-mainnet-abi.json](https://raw.githubusercontent.com/skalenetwork/skale-network/master/releases/mainnet/skale-manager/1.11.0/skale-manager-1.11.0-mainnet-abi.json)
 
-    #### Fund SRW Wallet with ETH
+    #### 1.1.4 Fund SRW Wallet with ETH
 
     Be ready to fund ETH in your self-recharging wallet (SRW). See [Self-recharging wallet documentation](/ecosystem/validators/validator-cli/self-recharding-wallets).
 
     *Minimum ETH*: <math xmlns="http://www.w3.org/1998/Math/MathML"><mrow><mn>0.5</mn><mo>&#x2219;</mo><mi>node</mi><mo>&#xA0;</mo><mi>count</mi></mrow></math>
 
-    #### Decide your commission fee
+    #### 1.1.5 Decide your commission fee
 
     Decide on your commission fee. This cannot be changed once it is set. To set a new commission fee, you'll have to register a new validator.
     This new validator would have to link nodes and accept delegations for it (old validator nodes and delegations cannot be rolled into a
@@ -47,7 +46,7 @@ import { Step, Steps, Aside } from "@astrojs/starlight/components";
     - [Validator & Token Economics](https://skale.network/blog/validator-economics)
     - [Tokenomics](https://skale.network/tokenomics)
 
-    ### Register Validator
+    ### 1.2 Register Validator
 
     SKALE Validator CLI is the validator client interface for registering a new validator into network or handling additional
     delegation services where validators can self delegate or token holders can delegate to a validator. These are the type of
@@ -67,7 +66,7 @@ import { Step, Steps, Aside } from "@astrojs/starlight/components";
         This does not need to be included in every node. Setting up once per validator organization is sufficient.
     </Aside>
 
-    #### Install SKALE Validator CLI
+    #### 1.2.1 Install SKALE Validator CLI
 
     ##### Download the SKALE Validator CLI binary
 
@@ -97,7 +96,7 @@ import { Step, Steps, Aside } from "@astrojs/starlight/components";
 
     - `-w/--wallet` - Type of the wallet that will be used for signing transactions (software or ledger)
 
-    #### Setup wallet
+    #### 1.2.2 Setup wallet
 
     ##### Software wallet
 
@@ -126,7 +125,7 @@ import { Step, Steps, Aside } from "@astrojs/starlight/components";
     Make sure you enabled blind signing on ETH application settings. Otherwise transactions won't work
     </Aside>
     
-    #### Register as a new SKALE validator
+    #### 1.2.3 Register as a new SKALE validator
 
     <Aside type="caution" title="Warning">
     DON'T REGISTER A NEW VALIDATOR IF YOU ALREADY HAVE ONE! check : `sk-val validator ls`. For additional node set up, please go to Step 3.
@@ -149,11 +148,12 @@ import { Step, Steps, Aside } from "@astrojs/starlight/components";
     -   `--gas-price` - Gas price value in Gwei for transaction (if not specified doubled average network value will be used)
     -   `--yes` - Confirmation flag
 
-    ### Make sure that your validator is added to the trusted list
+    ### 1.3 Make sure that your validator is added to the trusted list
 
     To ensure that your validator is added to trusted contact SKALE team.
 
     <Aside type="note" title="Important">
     This is a temporary process, which will be removed as the community matures.
     </Aside>
+
 </Steps>
