Add SKALE Connect Deployments for Testnets

--- a/src/content/docs/builders/tools/oracles/skale-connect.mdx
+++ b/src/content/docs/builders/tools/oracles/skale-connect.mdx
@@ -12,8 +12,14 @@ import { Steps } from "@astrojs/starlight/components";
 	toolDocsLink="https://github.com/TheGreatAxios/skale-oracle-example-js/blob/main/index.js"
 >
 
-## Theory
+| Chain Name      | Oracle Contract Address                    |
+| --------------- | ------------------------------------------ |
+| Calypso Testnet | 0x3aBF627F8450242376331c0752d19c9c6F01CB88 |
+| Europa Testnet  | 0x3ac975ec90aD45D52B8A9599cB7910689772593C |
+| Nebula Testnet  | 0x476a3F651d724472346bA4D6389665abC4921537 |
+| Titan Testnet   | 0xC0007F195B7c49b40C6166a78B2C81Fee8f7593E |
 
+## Theory
 
 **Oracle Methods**
 
