Add Bridge Link to Builders Home

--- a/src/content/docs/builders/index.mdx
+++ b/src/content/docs/builders/index.mdx
@@ -13,6 +13,10 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 		href="/builders/app-developers/overview"
 	/>
 	<LinkCard
+		title="Bridging"
+		href="/builders/app-developers/bridge/overview"
+	/>
+	<LinkCard
 		title="Chain Operators"
 		href="/builders/chain-operators/architecture"
 	/>
