Add c++ gas miner for Unity by Cryptopia

--- a/src/content/docs/builders/tools/libraries/unity.mdx
+++ b/src/content/docs/builders/tools/libraries/unity.mdx
@@ -5,6 +5,7 @@ description: Intro to Unity Libraries
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import {Content as Nethereum} from './unity/nethereum.mdx';
 import {Content as JSON_RPC_Calls} from './json-rpc-calls.mdx';
+import {Content as Cryptopia} from './unity/cryptopia.mdx';
 
 <Tabs>
 <TabItem label="Nethereum">
@@ -12,5 +13,8 @@ import {Content as JSON_RPC_Calls} from './json-rpc-calls.mdx';
 </TabItem>
 <TabItem label="JSON-RPC Calls">
 <JSON_RPC_Calls/>
+</TabItem>
+<TabItem label="POW Gas Miner">
+<Cryptopia/>
 </TabItem>
 </Tabs>
